@@ -22,7 +22,13 @@ package org.apache.airavata.orchestrator.cpi.impl;
 import java.io.File;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Calendar;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Optional;
 import java.util.concurrent.ExecutorService;
 import org.apache.airavata.common.exception.AiravataException;
 import org.apache.airavata.common.exception.ApplicationSettingsException;
@@ -30,7 +36,13 @@ import org.apache.airavata.common.utils.AiravataUtils;
 import org.apache.airavata.common.utils.ServerSettings;
 import org.apache.airavata.common.utils.ThriftUtils;
 import org.apache.airavata.model.appcatalog.appinterface.ApplicationInterfaceDescription;
-import org.apache.airavata.model.appcatalog.computeresource.*;
+import org.apache.airavata.model.appcatalog.computeresource.ComputeResourceDescription;
+import org.apache.airavata.model.appcatalog.computeresource.JobSubmissionInterface;
+import org.apache.airavata.model.appcatalog.computeresource.JobSubmissionProtocol;
+import org.apache.airavata.model.appcatalog.computeresource.MonitorMode;
+import org.apache.airavata.model.appcatalog.computeresource.SSHJobSubmission;
+import org.apache.airavata.model.appcatalog.groupresourceprofile.GroupComputeResourcePreference;
+import org.apache.airavata.model.appcatalog.groupresourceprofile.ResourceType;
 import org.apache.airavata.model.application.io.DataType;
 import org.apache.airavata.model.application.io.InputDataObjectType;
 import org.apache.airavata.model.application.io.OutputDataObjectType;
@@ -44,9 +56,14 @@ import org.apache.airavata.model.process.ProcessModel;
 import org.apache.airavata.model.scheduling.ComputationalResourceSchedulingModel;
 import org.apache.airavata.model.status.TaskState;
 import org.apache.airavata.model.status.TaskStatus;
-import org.apache.airavata.model.task.*;
+import org.apache.airavata.model.task.DataStageType;
+import org.apache.airavata.model.task.DataStagingTaskModel;
+import org.apache.airavata.model.task.EnvironmentSetupTaskModel;
+import org.apache.airavata.model.task.JobSubmissionTaskModel;
+import org.apache.airavata.model.task.MonitorTaskModel;
+import org.apache.airavata.model.task.TaskModel;
+import org.apache.airavata.model.task.TaskTypes;
 import org.apache.airavata.model.util.ExperimentModelUtil;
-import org.apache.airavata.orchestrator.core.context.OrchestratorContext;
 import org.apache.airavata.orchestrator.core.exception.OrchestratorException;
 import org.apache.airavata.orchestrator.core.impl.GFACPassiveJobSubmitter;
 import org.apache.airavata.orchestrator.core.job.JobSubmitter;
@@ -95,8 +112,7 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
 
     public ValidationResults validateExperiment(ExperimentModel experiment)
             throws OrchestratorException, LaunchValidationException {
-        org.apache.airavata.model.error.ValidationResults validationResults =
-                new org.apache.airavata.model.error.ValidationResults();
+        ValidationResults validationResults = new ValidationResults();
         validationResults.setValidationState(
                 true); // initially making it to success, if atleast one failed them simply mark it failed.
         String errorMsg = "Validation Errors : ";
@@ -172,8 +188,7 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
     public ValidationResults validateProcess(ExperimentModel experiment, ProcessModel processModel)
             throws OrchestratorException, LaunchValidationException {
 
-        org.apache.airavata.model.error.ValidationResults validationResults =
-                new org.apache.airavata.model.error.ValidationResults();
+        ValidationResults validationResults = new ValidationResults();
         validationResults.setValidationState(
                 true); // initially making it to success, if atleast one failed them simply mark it failed.
         String errorMsg = "Validation Errors : ";
@@ -304,14 +319,19 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
     public String createAndSaveTasks(String gatewayId, ProcessModel processModel) throws OrchestratorException {
         final RegistryService.Client registryClient = getRegistryServiceClient();
         try {
+            GroupComputeResourcePreference preference =
+                    OrchestratorUtils.getGroupComputeResourcePreference(processModel);
+            ResourceType resourceType = preference.getResourceType();
+            logger.info("Determined resource type as {} for process {}", resourceType, processModel.getProcessId());
+
             ComputationalResourceSchedulingModel resourceSchedule = processModel.getProcessResourceSchedule();
-            String userGivenQueueName = resourceSchedule.getQueueName();
             int userGivenWallTime = resourceSchedule.getWallTimeLimit();
             String resourceHostId = resourceSchedule.getResourceHostId();
             if (resourceHostId == null) {
                 throw new OrchestratorException("Compute Resource Id cannot be null at this point");
             }
-            ComputeResourceDescription computeResource = registryClient.getComputeResource(resourceHostId);
+
+            // TODO - handle for different resource types
             JobSubmissionInterface preferredJobSubmissionInterface =
                     OrchestratorUtils.getPreferredJobSubmissionInterface(processModel, gatewayId);
             JobSubmissionProtocol preferredJobSubmissionProtocol =
@@ -322,43 +342,13 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
                 // TODO - breakdown unicore all in one task to multiple tasks, then we don't need to handle UNICORE
                 // here.
                 taskIdList.addAll(createAndSaveSubmissionTasks(
-                        registryClient, gatewayId, preferredJobSubmissionInterface, processModel, userGivenWallTime));
+                        registryClient, preferredJobSubmissionInterface, processModel, userGivenWallTime));
             } else {
-                taskIdList.addAll(createAndSaveEnvSetupTask(registryClient, gatewayId, processModel));
-                taskIdList.addAll(createAndSaveInputDataStagingTasks(processModel, gatewayId));
-                //                if (autoSchedule) {
-                //                    List<BatchQueue> definedBatchQueues = computeResource.getBatchQueues();
-                //                    for (BatchQueue batchQueue : definedBatchQueues) {
-                //                        if (batchQueue.getQueueName().equals(userGivenQueueName)) {
-                //                            int maxRunTime = batchQueue.getMaxRunTime();
-                //                            if (maxRunTime < userGivenWallTime) {
-                //                                resourceSchedule.setWallTimeLimit(maxRunTime);
-                //                                // need to create more job submissions
-                //                                int numOfMaxWallTimeJobs = ((int) Math.floor(userGivenWallTime /
-                // maxRunTime));
-                //                                for (int i = 1; i <= numOfMaxWallTimeJobs; i++) {
-                //                                    taskIdList.addAll(
-                //                                            createAndSaveSubmissionTasks(registryClient, gatewayId,
-                // preferredJobSubmissionInterface, processModel, maxRunTime));
-                //                                }
-                //                                int leftWallTime = userGivenWallTime % maxRunTime;
-                //                                if (leftWallTime != 0) {
-                //                                    taskIdList.addAll(
-                //                                            createAndSaveSubmissionTasks(registryClient, gatewayId,
-                // preferredJobSubmissionInterface, processModel, leftWallTime));
-                //                                }
-                //                            } else {
-                //                                taskIdList.addAll(
-                //                                        createAndSaveSubmissionTasks(registryClient, gatewayId,
-                // preferredJobSubmissionInterface, processModel, userGivenWallTime));
-                //                            }
-                //                        }
-                //                    }
-                //                } else {
+                taskIdList.addAll(createAndSaveEnvSetupTask(registryClient, gatewayId, processModel, resourceType));
+                taskIdList.addAll(createAndSaveInputDataStagingTasks(processModel, gatewayId, resourceType));
                 taskIdList.addAll(createAndSaveSubmissionTasks(
-                        registryClient, gatewayId, preferredJobSubmissionInterface, processModel, userGivenWallTime));
-                //                }
-                taskIdList.addAll(createAndSaveOutputDataStagingTasks(processModel, gatewayId));
+                        registryClient, preferredJobSubmissionInterface, processModel, userGivenWallTime));
+                taskIdList.addAll(createAndSaveOutputDataStagingTasks(processModel, gatewayId, resourceType));
             }
             // update process scheduling
             registryClient.updateProcess(processModel, processModel.getProcessId());
@@ -376,9 +366,11 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
             String gatewayId, ProcessModel processModel, ProcessModel parentProcess) throws OrchestratorException {
         final RegistryService.Client registryClient = getRegistryServiceClient();
         try {
-            List<String> taskIdList = new ArrayList<>();
-
-            taskIdList.addAll(createAndSaveIntermediateOutputDataStagingTasks(processModel, gatewayId, parentProcess));
+            GroupComputeResourcePreference preference =
+                    OrchestratorUtils.getGroupComputeResourcePreference(processModel);
+            ResourceType resourceType = preference.getResourceType();
+            List<String> taskIdList = new ArrayList<>(createAndSaveIntermediateOutputDataStagingTasks(
+                    processModel, gatewayId, parentProcess, resourceType));
             // update process scheduling
             registryClient.updateProcess(processModel, processModel.getProcessId());
             return getTaskDag(taskIdList);
@@ -404,32 +396,41 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
     }
 
     private List<String> createAndSaveEnvSetupTask(
-            RegistryService.Client registryClient, String gatewayId, ProcessModel processModel)
+            RegistryService.Client registryClient,
+            String gatewayId,
+            ProcessModel processModel,
+            ResourceType resourceType)
             throws TException, AiravataException, OrchestratorException {
         List<String> envTaskIds = new ArrayList<>();
+
         TaskModel envSetupTask = new TaskModel();
         envSetupTask.setTaskType(TaskTypes.ENV_SETUP);
-        envSetupTask.setTaskStatuses(Arrays.asList(new TaskStatus(TaskState.CREATED)));
+        envSetupTask.setTaskStatuses(List.of(new TaskStatus(TaskState.CREATED)));
         envSetupTask.setCreationTime(AiravataUtils.getCurrentTimestamp().getTime());
         envSetupTask.setLastUpdateTime(AiravataUtils.getCurrentTimestamp().getTime());
         envSetupTask.setParentProcessId(processModel.getProcessId());
+
         EnvironmentSetupTaskModel envSetupSubModel = new EnvironmentSetupTaskModel();
-        envSetupSubModel.setProtocol(OrchestratorUtils.getSecurityProtocol(processModel, gatewayId));
+        envSetupSubModel.setProtocol(
+                OrchestratorUtils.getSecurityProtocol(processModel, gatewayId)); // TODO support for CLOUD (AWS)
+
         String scratchLocation = OrchestratorUtils.getScratchLocation(processModel, gatewayId);
         String workingDir = scratchLocation + File.separator + processModel.getProcessId();
         envSetupSubModel.setLocation(workingDir);
+
         byte[] envSetupSub = ThriftUtils.serializeThriftObject(envSetupSubModel);
         envSetupTask.setSubTaskModel(envSetupSub);
         envSetupTask.setMaxRetry(3);
         envSetupTask.setCurrentRetry(0);
-        String envSetupTaskId = (String) registryClient.addTask(envSetupTask, processModel.getProcessId());
+        String envSetupTaskId = registryClient.addTask(envSetupTask, processModel.getProcessId());
         envSetupTask.setTaskId(envSetupTaskId);
         envTaskIds.add(envSetupTaskId);
+
         return envTaskIds;
     }
 
-    public List<String> createAndSaveInputDataStagingTasks(ProcessModel processModel, String gatewayId)
-            throws AiravataException, OrchestratorException {
+    public List<String> createAndSaveInputDataStagingTasks(
+            ProcessModel processModel, String gatewayId, ResourceType resourceType) throws AiravataException {
 
         List<String> dataStagingTaskIds = new ArrayList<>();
         List<InputDataObjectType> processInputs = processModel.getProcessInputs();
@@ -446,7 +447,7 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
                     case URI:
                     case URI_COLLECTION:
                         if ((processInput.getValue() == null
-                                        || processInput.getValue().equals(""))
+                                        || processInput.getValue().isEmpty())
                                 && !processInput.isIsRequired()) {
                             logger.debug(
                                     "Skipping input data staging task for {} since value is empty and not required",
@@ -455,8 +456,8 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
                         }
                         final RegistryService.Client registryClient = getRegistryServiceClient();
                         try {
-                            TaskModel inputDataStagingTask =
-                                    getInputDataStagingTask(registryClient, processModel, processInput, gatewayId);
+                            TaskModel inputDataStagingTask = getInputDataStagingTask(
+                                    registryClient, processModel, processInput, gatewayId, resourceType);
                             String taskId = registryClient.addTask(inputDataStagingTask, processModel.getProcessId());
                             inputDataStagingTask.setTaskId(taskId);
                             dataStagingTaskIds.add(inputDataStagingTask.getTaskId());
@@ -477,7 +478,8 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
         return dataStagingTaskIds;
     }
 
-    public List<String> createAndSaveOutputDataStagingTasks(ProcessModel processModel, String gatewayId)
+    public List<String> createAndSaveOutputDataStagingTasks(
+            ProcessModel processModel, String gatewayId, ResourceType resourceType)
             throws AiravataException, TException, OrchestratorException {
 
         final RegistryService.Client registryClient = getRegistryServiceClient();
@@ -495,7 +497,12 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
                                 processOutput.setValue(appName + ".stdout");
                             }
                             createOutputDataSatagingTasks(
-                                    registryClient, processModel, gatewayId, dataStagingTaskIds, processOutput);
+                                    registryClient,
+                                    processModel,
+                                    gatewayId,
+                                    dataStagingTaskIds,
+                                    processOutput,
+                                    resourceType);
                             break;
                         case STDERR:
                             if (null == processOutput.getValue()
@@ -503,12 +510,22 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
                                 processOutput.setValue(appName + ".stderr");
                             }
                             createOutputDataSatagingTasks(
-                                    registryClient, processModel, gatewayId, dataStagingTaskIds, processOutput);
+                                    registryClient,
+                                    processModel,
+                                    gatewayId,
+                                    dataStagingTaskIds,
+                                    processOutput,
+                                    resourceType);
                             break;
                         case URI:
                         case URI_COLLECTION:
                             createOutputDataSatagingTasks(
-                                    registryClient, processModel, gatewayId, dataStagingTaskIds, processOutput);
+                                    registryClient,
+                                    processModel,
+                                    gatewayId,
+                                    dataStagingTaskIds,
+                                    processOutput,
+                                    resourceType);
                             break;
                         default:
                             // nothing to do
@@ -518,8 +535,9 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
             }
 
             try {
-                if (isArchive(registryClient, processModel, orchestratorContext)) {
-                    createArchiveDataStatgingTask(registryClient, processModel, gatewayId, dataStagingTaskIds);
+                if (isArchive(registryClient, processModel)) {
+                    createArchiveDataStatgingTask(
+                            registryClient, processModel, gatewayId, dataStagingTaskIds, resourceType);
                 }
             } catch (Exception e) {
                 throw new AiravataException("Error! Application interface retrieval failed", e);
@@ -533,7 +551,7 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
     }
 
     public List<String> createAndSaveIntermediateOutputDataStagingTasks(
-            ProcessModel processModel, String gatewayId, ProcessModel parentProcess)
+            ProcessModel processModel, String gatewayId, ProcessModel parentProcess, ResourceType resourceType)
             throws AiravataException, TException, OrchestratorException {
 
         final RegistryService.Client registryClient = getRegistryServiceClient();
@@ -556,7 +574,8 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
                                     gatewayId,
                                     parentProcess,
                                     dataStagingTaskIds,
-                                    processOutput);
+                                    processOutput,
+                                    resourceType);
                             break;
                         case STDERR:
                             if (null == processOutput.getValue()
@@ -569,7 +588,8 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
                                     gatewayId,
                                     parentProcess,
                                     dataStagingTaskIds,
-                                    processOutput);
+                                    processOutput,
+                                    resourceType);
                             break;
                         case URI:
                         case URI_COLLECTION:
@@ -579,7 +599,8 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
                                     gatewayId,
                                     parentProcess,
                                     dataStagingTaskIds,
-                                    processOutput);
+                                    processOutput,
+                                    resourceType);
                             break;
                         default:
                             // nothing to do
@@ -596,9 +617,7 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
         return dataStagingTaskIds;
     }
 
-    private boolean isArchive(
-            RegistryService.Client registryClient, ProcessModel processModel, OrchestratorContext orchestratorContext)
-            throws TException {
+    private boolean isArchive(RegistryService.Client registryClient, ProcessModel processModel) throws TException {
         ApplicationInterfaceDescription appInterface =
                 registryClient.getApplicationInterface(processModel.getApplicationInterfaceId());
         return appInterface.isArchiveWorkingDirectory();
@@ -608,11 +627,12 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
             RegistryService.Client registryClient,
             ProcessModel processModel,
             String gatewayId,
-            List<String> dataStagingTaskIds)
+            List<String> dataStagingTaskIds,
+            ResourceType resourceType)
             throws AiravataException, TException, OrchestratorException {
-        TaskModel archiveTask = null;
+        TaskModel archiveTask;
         try {
-            archiveTask = getOutputDataStagingTask(registryClient, processModel, null, gatewayId, null);
+            archiveTask = getOutputDataStagingTask(registryClient, processModel, null, gatewayId, null, resourceType);
         } catch (TException e) {
             throw new AiravataException("Error! DataStaging sub task serialization failed", e);
         }
@@ -626,11 +646,12 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
             ProcessModel processModel,
             String gatewayId,
             List<String> dataStagingTaskIds,
-            OutputDataObjectType processOutput)
+            OutputDataObjectType processOutput,
+            ResourceType resourceType)
             throws AiravataException, OrchestratorException {
         try {
-            TaskModel outputDataStagingTask =
-                    getOutputDataStagingTask(registryClient, processModel, processOutput, gatewayId, null);
+            TaskModel outputDataStagingTask = getOutputDataStagingTask(
+                    registryClient, processModel, processOutput, gatewayId, null, resourceType);
             String taskId = registryClient.addTask(outputDataStagingTask, processModel.getProcessId());
             outputDataStagingTask.setTaskId(taskId);
             dataStagingTaskIds.add(outputDataStagingTask.getTaskId());
@@ -645,11 +666,12 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
             String gatewayId,
             ProcessModel parentProcess,
             List<String> dataStagingTaskIds,
-            OutputDataObjectType processOutput)
+            OutputDataObjectType processOutput,
+            ResourceType resourceType)
             throws AiravataException, OrchestratorException {
         try {
-            TaskModel outputDataStagingTask =
-                    getOutputDataStagingTask(registryClient, processModel, processOutput, gatewayId, parentProcess);
+            TaskModel outputDataStagingTask = getOutputDataStagingTask(
+                    registryClient, processModel, processOutput, gatewayId, parentProcess, resourceType);
             outputDataStagingTask.setTaskType(TaskTypes.OUTPUT_FETCHING);
             String taskId = registryClient.addTask(outputDataStagingTask, processModel.getProcessId());
             outputDataStagingTask.setTaskId(taskId);
@@ -661,14 +683,14 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
 
     private List<String> createAndSaveSubmissionTasks(
             RegistryService.Client registryClient,
-            String gatewayId,
             JobSubmissionInterface jobSubmissionInterface,
             ProcessModel processModel,
             int wallTime)
             throws TException, OrchestratorException {
 
         JobSubmissionProtocol jobSubmissionProtocol = jobSubmissionInterface.getJobSubmissionProtocol();
-        MonitorMode monitorMode = null;
+        MonitorMode monitorMode;
+
         if (jobSubmissionProtocol == JobSubmissionProtocol.SSH
                 || jobSubmissionProtocol == JobSubmissionProtocol.SSH_FORK) {
             SSHJobSubmission sshJobSubmission =
@@ -688,42 +710,51 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
                     jobSubmissionProtocol.name());
             throw new OrchestratorException("Unsupported Job Submission Protocol " + jobSubmissionProtocol.name());
         }
+
         List<String> submissionTaskIds = new ArrayList<>();
-        TaskModel taskModel = new TaskModel();
-        taskModel.setParentProcessId(processModel.getProcessId());
-        taskModel.setCreationTime(System.currentTimeMillis());
-        taskModel.setLastUpdateTime(taskModel.getCreationTime());
         TaskStatus taskStatus = new TaskStatus(TaskState.CREATED);
         taskStatus.setTimeOfStateChange(AiravataUtils.getCurrentTimestamp().getTime());
-        taskModel.setTaskStatuses(Arrays.asList(taskStatus));
-        taskModel.setTaskType(TaskTypes.JOB_SUBMISSION);
+
         JobSubmissionTaskModel submissionSubTask = new JobSubmissionTaskModel();
         submissionSubTask.setMonitorMode(monitorMode);
         submissionSubTask.setJobSubmissionProtocol(jobSubmissionProtocol);
         submissionSubTask.setWallTime(wallTime);
+
         byte[] bytes = ThriftUtils.serializeThriftObject(submissionSubTask);
+
+        TaskModel taskModel = new TaskModel();
+        taskModel.setParentProcessId(processModel.getProcessId());
+        taskModel.setCreationTime(System.currentTimeMillis());
+        taskModel.setLastUpdateTime(taskModel.getCreationTime());
+        taskModel.setTaskStatuses(List.of(taskStatus));
+        taskModel.setTaskType(TaskTypes.JOB_SUBMISSION);
         taskModel.setSubTaskModel(bytes);
         taskModel.setMaxRetry(1);
         taskModel.setCurrentRetry(0);
+
         String taskId = registryClient.addTask(taskModel, processModel.getProcessId());
         taskModel.setTaskId(taskId);
         submissionTaskIds.add(taskModel.getTaskId());
 
         // create monitor task for this Email based monitor mode job
         if (monitorMode == MonitorMode.JOB_EMAIL_NOTIFICATION_MONITOR || monitorMode == MonitorMode.CLOUD_JOB_MONITOR) {
+
+            TaskStatus monitorTaskStatus = new TaskStatus(TaskState.CREATED);
+            monitorTaskStatus.setTimeOfStateChange(
+                    AiravataUtils.getCurrentTimestamp().getTime());
+
             TaskModel monitorTaskModel = new TaskModel();
             monitorTaskModel.setParentProcessId(processModel.getProcessId());
             monitorTaskModel.setCreationTime(System.currentTimeMillis());
             monitorTaskModel.setLastUpdateTime(monitorTaskModel.getCreationTime());
-            TaskStatus monitorTaskStatus = new TaskStatus(TaskState.CREATED);
-            monitorTaskStatus.setTimeOfStateChange(
-                    AiravataUtils.getCurrentTimestamp().getTime());
-            monitorTaskModel.setTaskStatuses(Arrays.asList(monitorTaskStatus));
+            monitorTaskModel.setTaskStatuses(List.of(monitorTaskStatus));
             monitorTaskModel.setTaskType(TaskTypes.MONITORING);
+
             MonitorTaskModel monitorSubTaskModel = new MonitorTaskModel();
             monitorSubTaskModel.setMonitorMode(monitorMode);
             monitorTaskModel.setSubTaskModel(ThriftUtils.serializeThriftObject(monitorSubTaskModel));
-            String mTaskId = (String) registryClient.addTask(monitorTaskModel, processModel.getProcessId());
+
+            String mTaskId = registryClient.addTask(monitorTaskModel, processModel.getProcessId());
             monitorTaskModel.setTaskId(mTaskId);
             submissionTaskIds.add(monitorTaskModel.getTaskId());
         }
@@ -744,7 +775,8 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
             RegistryService.Client registryClient,
             ProcessModel processModel,
             InputDataObjectType processInput,
-            String gatewayId)
+            String gatewayId,
+            ResourceType resourceType)
             throws TException, AiravataException, OrchestratorException {
         // create new task model for this task
         TaskModel taskModel = new TaskModel();
@@ -759,12 +791,14 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
         DataStagingTaskModel submodel = new DataStagingTaskModel();
         ComputeResourceDescription computeResource =
                 registryClient.getComputeResource(processModel.getComputeResourceId());
+
         String scratchLocation = OrchestratorUtils.getScratchLocation(processModel, gatewayId);
         String workingDir =
                 (scratchLocation.endsWith(File.separator) ? scratchLocation : scratchLocation + File.separator)
                         + processModel.getProcessId()
                         + File.separator;
-        URI destination = null;
+
+        URI destination;
         try {
             DataMovementProtocol dataMovementProtocol =
                     OrchestratorUtils.getPreferredDataMovementProtocol(processModel, gatewayId);
@@ -781,13 +815,16 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
                     destinationPath.toString(),
                     null,
                     null);
+
         } catch (URISyntaxException e) {
+            logger.error("Error while constructing destination file URI", e);
             throw new OrchestratorException("Error while constructing destination file URI", e);
         }
+
+        submodel.setDestination(destination.toString());
         submodel.setType(DataStageType.INPUT);
         submodel.setSource(processInput.getValue());
         submodel.setProcessInput(processInput);
-        submodel.setDestination(destination.toString());
         taskModel.setSubTaskModel(ThriftUtils.serializeThriftObject(submodel));
         taskModel.setMaxRetry(3);
         taskModel.setCurrentRetry(0);
@@ -799,30 +836,32 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
             ProcessModel processModel,
             OutputDataObjectType processOutput,
             String gatewayId,
-            ProcessModel parentProcess)
+            ProcessModel parentProcess,
+            ResourceType resourceType)
             throws TException, AiravataException, OrchestratorException {
         try {
-
             // create new task model for this task
+            TaskStatus taskStatus = new TaskStatus(TaskState.CREATED);
+            taskStatus.setTimeOfStateChange(AiravataUtils.getCurrentTimestamp().getTime());
+
             TaskModel taskModel = new TaskModel();
             taskModel.setParentProcessId(processModel.getProcessId());
             taskModel.setCreationTime(AiravataUtils.getCurrentTimestamp().getTime());
             taskModel.setLastUpdateTime(taskModel.getCreationTime());
-            TaskStatus taskStatus = new TaskStatus(TaskState.CREATED);
-            taskStatus.setTimeOfStateChange(AiravataUtils.getCurrentTimestamp().getTime());
-            taskModel.setTaskStatuses(Arrays.asList(taskStatus));
+            taskModel.setTaskStatuses(List.of(taskStatus));
             taskModel.setTaskType(TaskTypes.DATA_STAGING);
+
             ComputeResourceDescription computeResource =
                     registryClient.getComputeResource(processModel.getComputeResourceId());
+            DataStagingTaskModel submodel = new DataStagingTaskModel();
 
             String workingDir = OrchestratorUtils.getScratchLocation(processModel, gatewayId)
                     + File.separator
                     + (parentProcess == null ? processModel.getProcessId() : parentProcess.getProcessId())
                     + File.separator;
-            DataStagingTaskModel submodel = new DataStagingTaskModel();
             DataMovementProtocol dataMovementProtocol =
                     OrchestratorUtils.getPreferredDataMovementProtocol(processModel, gatewayId);
-            URI source = null;
+            URI source;
             try {
                 String loginUserName = OrchestratorUtils.getLoginUserName(processModel, gatewayId);
                 if (processOutput != null) {
@@ -848,11 +887,11 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
                             null,
                             null);
                 }
+
             } catch (URISyntaxException e) {
                 throw new OrchestratorException("Error while constructing source file URI", e);
             }
-            // We don't know destination location at this time, data staging task will set this.
-            // because destination is required field we set dummy destination
+
             submodel.setSource(source.toString());
             // We don't know destination location at this time, data staging task will set this.
             // because destination is required field we set dummy destination
@@ -861,6 +900,7 @@ public class SimpleOrchestratorImpl extends AbstractOrchestrator {
             taskModel.setMaxRetry(3);
             taskModel.setCurrentRetry(0);
             return taskModel;
+
         } catch (OrchestratorException e) {
             throw new OrchestratorException("Error occurred while retrieving data movement from app catalog", e);
         }
